<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_lagu"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/judul_lagu"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/artist"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ket_album" />

            <TextView
                android:id="@+id/tv_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_margin"
                android:gravity="center"
                android:text="@string/album" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_lirik_lagu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/lirik_lagu"
            android:textSize="@dimen/medium_text" />
    </LinearLayout>

</ScrollView>